# PyMCSL

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: aux_classes.rst  basic_classes.rst  basic_notions_and_ideas.rst  conf.py  index.rst  markovchain.rst  modules.rst  montecarlosimulation.rst  pymcsl.rst  requirements.txt  subsimulation.rst
docs/examples/: galtonboard.ipynb  markovchain.ipynb
docs/source/: conf.py  index.rst
docs/tutorials/: galtonboard.ipynb
examples/: galtonboard.ipynb  galtonboard.py  markovchain.ipynb  pymcsl
pymcsl/: __init__.py  markovchain.py  montecarlosimulation.py  randomvariable.py  subsimulation.py
src/: capsule.py  markovchain.py  montecarlosimulation.py  subsimulation.py
tests/: galtonboard.py  test0.py  test1.py  test2.py  test3.py
