[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "PyMCSL"
authors = [{name = "Filipe Chagas Ferraz", email = "filipe.ferraz0@gmail.com"}]
dynamic = ["version", "PyMCSL (Python Monte Carlo Simulation Library) is a Python library for Monte Carlo simulation."]